[gd_scene load_steps=4 format=3 uid="uid://bwld3m3kv1433"]

[ext_resource type="Script" path="res://Scripts/char_selection.gd" id="1_2ht1y"]
[ext_resource type="Script" path="res://Scripts/button_to_manager.gd" id="1_c0f5y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4tnu"]
bg_color = Color(1, 1, 1, 1)

[node name="CharSelection" type="Control" node_paths=PackedStringArray("next_btn", "next_msg", "desc", "ip_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ht1y")
next_btn = NodePath("next_btn")
next_msg = NodePath("need_player")
desc = NodePath("BG/desc")
ip_list = NodePath("IP_list")

[node name="BG" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s4tnu")

[node name="Header" type="Label" parent="BG"]
layout_mode = 0
offset_left = 728.0
offset_right = 1198.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Waiting for players..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="desc" type="RichTextLabel" parent="BG"]
layout_mode = 0
offset_left = 528.0
offset_top = 96.0
offset_right = 1392.0
offset_bottom = 176.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center][font_size=\"30\"]On your phone, look for [b]Group 2[/b] in lobby list.[/font_size][/center]"

[node name="next_btn" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1765.0
offset_top = 984.0
offset_right = 1920.0
offset_bottom = 1088.0
theme_override_font_sizes/font_size = 50
text = "Go!"
script = ExtResource("1_c0f5y")
msg = "close_char_select"

[node name="manual_header" type="Label" parent="."]
layout_mode = 0
offset_left = 1440.0
offset_top = 160.0
offset_right = 1852.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = ".. or manually join the lobby."
horizontal_alignment = 1
vertical_alignment = 1

[node name="need_player" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 1296.0
offset_top = 984.0
offset_right = 1896.0
offset_bottom = 1064.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[right]You need at least 2 players to proceed. 
[font_size=30](%d/2)[/font_size][/right]"
scroll_active = false

[node name="IP_list" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1456.0
offset_top = 224.0
offset_right = 1880.0
offset_bottom = 936.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 45

[connection signal="mouse_entered" from="next_btn" to="." method="mouse_enter_sfx"]
[connection signal="pressed" from="next_btn" to="." method="mouse_click_sfx"]
[connection signal="pressed" from="next_btn" to="next_btn" method="pressed"]
